function updates and swagger.json update
